[package]
name = "cppbuild"
version = "0.1.0"
authors = ["julian lazaras <lazaras@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde = "*"
serde_json = "*"
serde_derive = "*"
whoami = "*"
walkdir = "*"
pkg-config = {path = "pkg-config"}
tempfile = "*"
tar = "*"
reqwest = { version = "0.10", features = ["blocking", "json"] }
libflate = "*"
lazy_static = "1.4.0"
dirs = "2.0"
rust_info = "0.3.0"