[package]
name = "cppbuild"
version = "0.1.1"
authors = ["julian lazaras <lazaras@pdx.edu>"]
edition = "2018"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/cppbuild"
repository = "https://github.com/cardinalcat/cppbuild"
description = """
library for cppbuild a project aimed at creating a cargo like tool for cpp that integrates other package managers through the use of pkg-config
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde = "1.0.106"
serde_json = "1.0.52"
serde_derive = "1.0.106"
whoami = "0.8.1"
walkdir = "2.3.1"
pkg-config = {path = "pkg-config", version = "0.3.17"}
tempfile = "3.1.0"
tar = "0.4.26"
reqwest = { version = "0.10", features = ["blocking", "json"] }
libflate = "1.0.0"
lazy_static = "1.4.0"
dirs = "2.0"
rust_info = "0.3.0"
clang = "0.23.0"
itertools = "0.9.0"
llvm-sys = "*"
libc = "*"